kubernetes/apps/storage/longhorn/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  hostnames:
    - longhorn.marcthespot.com
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
